Fixed: Broken entrance animation of main navigation due to focusManager forcing it to skip
Additional: Latest Items sectionTitle was not visible

--- a/home/home.css
+++ b/home/home.css
@@ -43,7 +43,6 @@
     font-size: 1.1em;
     font-weight: 200;
     margin-bottom: 35px;
-    position: fixed;
 }
 
 .homePageContainer .latestSection.active {
